<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBgGrey"
    tools:context=".restaurants.Reviews">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/reviews"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:fontFamily="serif"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_your_thoughts_below"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName"
        android:fontFamily="serif"
        android:layout_margin="5dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:progressBackgroundTint="@color/dark"
        android:progressTint="@color/colorAccent"
        tools:targetApi="lollipop"
        android:numStars="5"
        android:isIndicator="false"
        />

    <EditText
        android:id="@+id/writeReview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Share your review here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        android:gravity="start"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:layout_margin="5dp"
        />

    <Button
        android:id="@+id/submitReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeReview"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorAccent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>